# Microcontrollers

./: encoder.py  motorcontrol.py  picoconnect.py  rerun.py  test (1).py  test_plot.py
Digital Potentiometer/: CMakeLists.txt  bme280_spi.c
Drivers Comparison Source Code/: cmp_driver.py  compare.py  test.py  test_plot_GRBL.py  test_plot_Marlin.py
Rasp pi PICO Encoder code/: encoders.c
